# Gitea-Agent

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.claude/: CLAUDE.md
config/: eval.json  features.json
config/llm/: defaults.json  providers.json
config/workflows/: autonomous.json  chat.json  night.json  patch.json  self.json  standard.json  watch.json
docs/: README_technical.md
samuel/: cli.py  server.py
samuel/adapters/api/: rest.py
samuel/adapters/api/tests/: test_rest.py
samuel/adapters/audit/: async_sink.py  jsonl.py
samuel/adapters/gitea/: adapter.py
samuel/adapters/gitea/tests/: test_adapter.py
samuel/adapters/github/: adapter.py
samuel/adapters/llm/: claude.py  costs.py  deepseek.py  factory.py  http.py  lmstudio.py  ollama.py  openai_compat.py
samuel/adapters/quality/: registry.py
samuel/core/: bootstrap.py  bus.py  commands.py  config.py  events.py  git.py  ports.py  workflow.py
samuel/slices/ac_verification/: handler.py
samuel/slices/audit_trail/: owasp.py
samuel/slices/dashboard/: data.py  handler.py
samuel/slices/evaluation/: handler.py
samuel/slices/healing/: handler.py
samuel/slices/implementation/: handler.py  llm_loop.py
samuel/slices/planning/: handler.py
samuel/slices/pr_gates/: gates.py  handler.py
samuel/slices/privacy/: handler.py
samuel/slices/quality/: handler.py
samuel/slices/review/: handler.py
tests/: test_architecture_v2.py  test_audit_async.py  test_audit_jsonl.py  test_core_bus.py  test_core_config.py  test_core_git.py  test_core_workflow.py  test_self_mode.py  test_server_dashboard.py
(+19 files in other folders)
